Phase 0 baseline on WSL

--- a/config/.env.example
+++ b/config/.env.example
@@ -6,12 +6,16 @@
 # === LLM API 配置（可选：Phase 0 不强依赖）===
 ANTHROPIC_API_KEY=
 OPENAI_API_KEY=
+# 可选：自定义 OpenAI 兼容接口地址（例如代理 / 自建 / Azure）。通常需要包含 `/v1`
+OPENAI_BASE_URL=
 
 # === 渠道配置（Phase 2 使用，Phase 0 仅预留）===
 DISCORD_BOT_TOKEN=
 
 # === OpenClaw 配置 ===
 OPENCLAW_PORT=18789
+
+# OpenClaw Workspace（指向 savc-core；默认相对 config/ 目录）
 OPENCLAW_WORKSPACE=../savc-core
 
 # OpenClaw Gateway 本机鉴权 Token（本地生成即可；仅用于本机 CLI/Loopback）
