--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "setup": "bash scripts/setup.sh",
     "dev": "bash scripts/dev.sh",
     "doctor": "bash scripts/openclaw.sh doctor",
-    "openclaw:version": "bash scripts/openclaw.sh --version"
+    "openclaw:version": "bash scripts/openclaw.sh --version",
+    "prompt:phase1": "bash scripts/build_phase1_prompt.sh",
+    "test:phase1:runtime": "bash scripts/test_phase1_runtime.sh",
+    "test:phase1:dialogue": "bash scripts/test_phase1_dialogue.sh",
+    "test:phase1": "bash scripts/test_phase1.sh",
+    "test:all": "bash scripts/test_phase1.sh"
   }
 }
