--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:phase1:dialogue": "bash scripts/test_phase1_dialogue.sh",
     "test:phase1": "bash scripts/test_phase1.sh",
     "test:phase2": "bash scripts/test_phase2.sh",
-    "test:all": "bash scripts/test_phase1.sh && bash scripts/test_phase2.sh"
+    "test:phase3": "bash scripts/test_phase3.sh",
+    "test:all": "bash scripts/test_phase1.sh && bash scripts/test_phase2.sh && bash scripts/test_phase3.sh"
   }
 }
