--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "test:phase1": "bash scripts/test_phase1.sh",
     "test:phase2": "bash scripts/test_phase2.sh",
     "test:phase3": "bash scripts/test_phase3.sh",
-    "test:all": "bash scripts/test_phase1.sh && bash scripts/test_phase2.sh && bash scripts/test_phase3.sh"
+    "test:all": "bash scripts/test_phase1.sh && bash scripts/test_phase2.sh && bash scripts/test_phase3.sh",
+    "phase3:daily": "bash scripts/phase3_run_daily.sh",
+    "phase3:monthly": "bash scripts/phase3_run_monthly.sh",
+    "phase3:cron:install": "bash scripts/phase3_cron_install.sh",
+    "phase3:cron:remove": "bash scripts/phase3_cron_remove.sh"
   }
 }
