--- a/config/.env.example
+++ b/config/.env.example
@@ -11,6 +11,16 @@ OPENAI_BASE_URL=
 
 # === 渠道配置（Phase 2 使用，Phase 0 仅预留）===
 DISCORD_BOT_TOKEN=
+DISCORD_CHANNEL_ID=
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_CHAT_ID=
+
+# === Proactive 外部 API（Phase 2）===
+GOOGLE_CALENDAR_ID=
+GOOGLE_CALENDAR_SERVICE_ACCOUNT_JSON=
+OPENWEATHER_API_KEY=
+OPENWEATHER_LAT=
+OPENWEATHER_LON=
 
 # === OpenClaw 配置 ===
 OPENCLAW_PORT=18789
