--- a/config/.env.example
+++ b/config/.env.example
@@ -8,6 +8,8 @@ ANTHROPIC_API_KEY=
 OPENAI_API_KEY=
 # 可选：自定义 OpenAI 兼容接口地址（例如代理 / 自建 / Azure）。通常需要包含 `/v1`
 OPENAI_BASE_URL=
+# 长期记忆嵌入（硅基流动 OpenAI 兼容接口）
+SILICON_EMBEDDING_API_KEY=
 
 # === 渠道配置（Phase 2 使用，Phase 0 仅预留）===
 DISCORD_BOT_TOKEN=
@@ -21,6 +23,9 @@ GOOGLE_CALENDAR_SERVICE_ACCOUNT_JSON=
 OPENWEATHER_API_KEY=
 OPENWEATHER_LAT=
 OPENWEATHER_LON=
+
+# === 联网搜索 API（web_search）===
+BRAVE_API_KEY=
 
 # === OpenClaw 配置 ===
 OPENCLAW_PORT=18789
