--- a/config/.env.example
+++ b/config/.env.example
@@ -6,6 +6,14 @@
 # === LLM API 配置（可选：Phase 0 不强依赖）===
 ANTHROPIC_API_KEY=
 OPENAI_API_KEY=
+# 语义检索 embedding 模型（Phase 4a）
+EMBEDDING_MODEL=text-embedding-3-small
+# 语义检索运行模式：prod(真实 API) / mock(测试)
+SAVC_EMBEDDING_MODE=prod
+# 语义检索参数（Phase 4a）
+MEMORY_SEMANTIC_MIN_SCORE=0.3
+MEMORY_SEMANTIC_DUPLICATE_THRESHOLD=0.95
+MEMORY_SEMANTIC_HYBRID_ALPHA=0.7
 # 可选：自定义 OpenAI 兼容接口地址（例如代理 / 自建 / Azure）。通常需要包含 `/v1`
 OPENAI_BASE_URL=
 # 长期记忆嵌入（硅基流动 OpenAI 兼容接口）
