--- a/config/models.yaml
+++ b/config/models.yaml
@@ -23,3 +23,33 @@ routing:
     primary: "anthropic/claude-sonnet-4"
     max_tokens: 2000
 
+agents:
+  orchestrator:
+    primary: "anthropic/claude-opus-4-5"
+    fallback: "anthropic/claude-sonnet-4"
+    max_tokens: 4000
+
+  companion:
+    primary: "anthropic/claude-sonnet-4"
+    fallback: "anthropic/claude-3-haiku"
+    max_tokens: 1200
+
+  technical:
+    primary: "anthropic/claude-opus-4-5"
+    fallback: "anthropic/claude-sonnet-4"
+    max_tokens: 4000
+
+  creative:
+    primary: "anthropic/claude-sonnet-4"
+    fallback: "anthropic/claude-3-haiku"
+    max_tokens: 2400
+
+  tooling:
+    primary: "anthropic/claude-3-haiku"
+    fallback: "anthropic/claude-sonnet-4"
+    max_tokens: 1500
+
+  memory:
+    primary: "anthropic/claude-3-haiku"
+    fallback: "anthropic/claude-sonnet-4"
+    max_tokens: 1200
