--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test:phase3:longrun": "bash scripts/test_phase3_longrun.sh",
     "test:phase4a": "bash scripts/test_phase4a.sh",
     "test:phase4b": "bash scripts/test_phase4b.sh",
+    "test:phase4b:plugin": "bash scripts/test_phase4b_plugin.sh",
     "test:status": "bash scripts/test_phase_status.sh",
     "test:all": "bash scripts/test_phase1.sh && bash scripts/test_phase2.sh && bash scripts/test_phase3.sh",
     "phase2:run": "bash scripts/phase2_run_once.sh auto",
