phase 4收尾与 phase5 首推进

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "test:phase4a": "bash scripts/test_phase4a.sh",
     "test:phase4b": "bash scripts/test_phase4b.sh",
     "test:phase4b:plugin": "bash scripts/test_phase4b_plugin.sh",
+    "test:phase4b:plugin:real": "bash scripts/test_phase4b_plugin_real.sh",
+    "test:phase4b:perf": "bash scripts/test_phase4b_perf.sh",
+    "test:phase5c": "bash scripts/test_phase5c.sh",
     "test:status": "bash scripts/test_phase_status.sh",
     "test:all": "bash scripts/test_phase1.sh && bash scripts/test_phase2.sh && bash scripts/test_phase3.sh",
     "phase2:run": "bash scripts/phase2_run_once.sh auto",
