--- a/config/.env.example
+++ b/config/.env.example
@@ -8,12 +8,21 @@ ANTHROPIC_API_KEY=
 OPENAI_API_KEY=
 # 语义检索 embedding 模型（Phase 4a）
 EMBEDDING_MODEL=text-embedding-3-small
-# 语义检索运行模式：prod(真实 API) / mock(测试)
+# 语义检索运行模式：prod(真实 API) / mock(测试) / local(本地 embedding 服务，如 Ollama)
 SAVC_EMBEDDING_MODE=prod
 # 语义检索参数（Phase 4a）
 MEMORY_SEMANTIC_MIN_SCORE=0.3
 MEMORY_SEMANTIC_DUPLICATE_THRESHOLD=0.95
 MEMORY_SEMANTIC_HYBRID_ALPHA=0.7
+# 时间衰减（Phase 4 收尾）
+MEMORY_SEMANTIC_DECAY_ENABLED=true
+MEMORY_SEMANTIC_DECAY_HALF_LIFE_DAYS=30
+MEMORY_SEMANTIC_DECAY_MIN_FACTOR=0.35
+# 本地 embedding（SAVC_EMBEDDING_MODE=local 时生效）
+LOCAL_EMBEDDING_MODEL=nomic-embed-text
+LOCAL_EMBEDDING_BASE_URL=http://127.0.0.1:11434
+LOCAL_EMBEDDING_PATH=/api/embeddings
+LOCAL_EMBEDDING_VECTOR_DIM=768
 # 可选：自定义 OpenAI 兼容接口地址（例如代理 / 自建 / Azure）。通常需要包含 `/v1`
 OPENAI_BASE_URL=
 # 长期记忆嵌入（硅基流动 OpenAI 兼容接口）
