--- a/config/models.yaml
+++ b/config/models.yaml
@@ -39,6 +39,11 @@ agents:
     fallback: "anthropic/claude-sonnet-4"
     max_tokens: 4000
 
+  vibe-coder:
+    primary: "anthropic/claude-opus-4-5"
+    fallback: "anthropic/claude-sonnet-4"
+    max_tokens: 6000
+
   creative:
     primary: "anthropic/claude-sonnet-4"
     fallback: "anthropic/claude-3-haiku"
