--- a/config/.env.example
+++ b/config/.env.example
@@ -53,3 +53,16 @@ OPENCLAW_WORKSPACE=../savc-core
 # OpenClaw Gateway 本机鉴权 Token（本地生成即可；仅用于本机 CLI/Loopback）
 # 为空会导致 OpenClaw 配置加载失败（gateway.auth.token 需要环境变量替换）。
 OPENCLAW_GATEWAY_TOKEN=
+
+# === Phase 5d: 语音交互（默认 mock 验收）===
+# 可选值: mock / twilio / telnyx / plivo
+VOICE_CALL_PROVIDER=mock
+# 非 mock provider 时可按需填写
+VOICE_CALL_FROM_NUMBER=
+VOICE_CALL_TO_NUMBER=
+
+# === Phase 5e: 视觉能力 / 图像生成 ===
+# real 模式图像生成需要 OPENAI_API_KEY
+OPENAI_IMAGE_MODEL=gpt-image-1
+# 是否启用 Phase 5e live smoke（0=关闭，1=开启）
+PHASE5E_IMAGE_LIVE=0
