--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "test:phase4b:plugin:real": "bash scripts/test_phase4b_plugin_real.sh",
     "test:phase4b:perf": "bash scripts/test_phase4b_perf.sh",
     "test:phase5c": "bash scripts/test_phase5c.sh",
+    "test:phase5d": "bash scripts/test_phase5d.sh",
+    "test:phase5e": "bash scripts/test_phase5e.sh",
+    "test:phase5": "bash scripts/test_phase5.sh",
     "test:status": "bash scripts/test_phase_status.sh",
     "test:all": "bash scripts/test_phase1.sh && bash scripts/test_phase2.sh && bash scripts/test_phase3.sh",
     "phase2:run": "bash scripts/phase2_run_once.sh auto",
