LLM多Provider降级轮询

--- a/config/.env.example
+++ b/config/.env.example
@@ -6,6 +6,9 @@
 # === LLM API 配置（可选：Phase 0 不强依赖）===
 ANTHROPIC_API_KEY=
 OPENAI_API_KEY=
+# LLM 聊天主链路（多 Provider 降级）
+ANYROUTER_API_KEY=
+WZW_API_KEY=
 # 语义检索 embedding 模型（Phase 4a）
 EMBEDDING_MODEL=text-embedding-3-small
 # 语义检索运行模式：prod(真实 API) / mock(测试) / local(本地 embedding 服务，如 Ollama)
