feat(savc-ui): wire logs tab to gateway WS and polish UI

--- a/config/.env.example
+++ b/config/.env.example
@@ -63,9 +63,40 @@ VOICE_CALL_PROVIDER=mock
 # 非 mock provider 时可按需填写
 VOICE_CALL_FROM_NUMBER=
 VOICE_CALL_TO_NUMBER=
+# provider 对应密钥（按需填写）
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TELNYX_API_KEY=
+TELNYX_CONNECTION_ID=
+TELNYX_PUBLIC_KEY=
+PLIVO_AUTH_ID=
+PLIVO_AUTH_TOKEN=
+# 可选公网暴露（本地联调）
+NGROK_AUTHTOKEN=
+NGROK_DOMAIN=
+# 语音可选增强
+ELEVENLABS_API_KEY=
+OPENAI_TTS_BASE_URL=
+# 真人 TTS 参数预留（后续可用于自动注入 voice-call.config.tts）
+# provider: openai | elevenlabs
+VOICE_TTS_PROVIDER=openai
+VOICE_TTS_OPENAI_MODEL=gpt-4o-mini-tts
+VOICE_TTS_OPENAI_VOICE=alloy
+VOICE_TTS_OPENAI_INSTRUCTIONS=
+VOICE_TTS_ELEVENLABS_MODEL_ID=eleven_turbo_v2_5
+VOICE_TTS_ELEVENLABS_VOICE_ID=
+VOICE_TTS_ELEVENLABS_BASE_URL=
 
 # === Phase 5e: 视觉能力 / 图像生成 ===
 # real 模式图像生成需要 OPENAI_API_KEY
 OPENAI_IMAGE_MODEL=gpt-image-1
 # 是否启用 Phase 5e live smoke（0=关闭，1=开启）
 PHASE5E_IMAGE_LIVE=0
+
+# === Phase 6: Live2D 前端桥接（savc-ui）===
+# 模式: auto（优先网关失败回退 mock）| gateway（仅网关）| mock（仅本地）
+VITE_SAVC_UI_LIVE2D_MODE=auto
+VITE_SAVC_LIVE2D_MODEL_URL=/live2d/yuanyuan-lite.model.json
+VITE_SAVC_GATEWAY_URL=http://127.0.0.1:18789
+VITE_SAVC_GATEWAY_TOKEN=
+VITE_SAVC_SESSION_KEY=main
