--- a/savc-ui/package.json
+++ b/savc-ui/package.json
@@ -8,6 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource-variable/noto-sans-sc": "^5.2.10",
+    "@fontsource/jetbrains-mono": "^5.2.8",
+    "@noble/ed25519": "^2.3.0",
     "lit": "^3.3.2",
     "vite": "7.3.1"
   },
