chore(config): add optional silicon image env placeholders

--- a/config/.env.example
+++ b/config/.env.example
@@ -89,6 +89,9 @@ VOICE_TTS_ELEVENLABS_BASE_URL=
 
 # === Phase 5e: 视觉能力 / 图像生成 ===
 # real 模式图像生成需要 OPENAI_API_KEY
+# --- 硅基流动图像生成模型配置（可选）---
+SILICON_IMAGE_API_KEY=
+SILICON_IMAGE_MODEL=Pro/moonshotai/Kimi-K2.5
 OPENAI_IMAGE_MODEL=gpt-image-1
 # 是否启用 Phase 5e live smoke（0=关闭，1=开启）
 PHASE5E_IMAGE_LIVE=0
