--- a/package.json
+++ b/package.json
@@ -5,7 +5,20 @@
   "description": "Self-aware Virtual Companion (SAVC) workspace for OpenClaw.",
   "scripts": {
     "setup": "bash scripts/setup.sh",
+    "dev:check": "bash scripts/dev_preflight.sh",
     "dev": "bash scripts/dev.sh",
+    "dev:self-upgrade": "bash scripts/dev_self_upgrade.sh",
+    "dev:container:init": "bash scripts/dev_container.sh init-env",
+    "dev:container:up": "bash scripts/dev_container.sh up",
+    "dev:container:down": "bash scripts/dev_container.sh down",
+    "dev:container:logs": "bash scripts/dev_container.sh logs",
+    "dev:container:ps": "bash scripts/dev_container.sh ps",
+    "dev:container:config": "bash scripts/dev_container.sh config",
+    "yuanyuan:enable-autodev": "bash scripts/yuanyuan_enable_autodev.sh",
+    "yuanyuan:autodev": "bash scripts/yuanyuan_autodev.sh",
+    "hooks:install": "bash scripts/install_git_hooks.sh",
+    "security:scan": "bash scripts/scan_secrets.sh all",
+    "security:scan:staged": "bash scripts/scan_secrets.sh staged",
     "llm:failover:apply": "bash scripts/llm_enable_failover.sh",
     "doctor": "bash scripts/openclaw.sh doctor",
     "openclaw:version": "bash scripts/openclaw.sh --version",
