--- a/savc-ui/package.json
+++ b/savc-ui/package.json
@@ -13,6 +13,7 @@
     "@lydell/node-pty": "1.2.0-beta.3",
     "@noble/ed25519": "^2.3.0",
     "lit": "^3.3.2",
+    "redis": "^4.7.1",
     "vite": "7.3.1"
   },
   "devDependencies": {
